--- a/app/honour.html
+++ b/app/honour.html
@@ -1248,10 +1248,11 @@
     <script src="js/libs/jquery.min.js"></script>
     <!-- jQuery-UI-->
     <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-    <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
-    <script src="jquery-ui-1.12.1.custom/datepicker.extension.range.min.js"></script>
+    <!--script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')-->
+    <!--script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')-->
     <script src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
     <script src="js/libs/jquery.dotdotdot.js"></script>
+    <script src="js/libs/sticky-kit.min.js"></script>
     <!-- slick-->
     <script src="slick/slick.min.js"></script>
     <!-- Bootstrap-->
